# cds-108-zebra

./: .gitignore  README.md  pyproject.toml
handin/: Hackathon_Project_Report.md
handin/artifacts/: README.md  classmate_dataset_summary.json  metrics_history.json  own_dataset_summary.json  quantization_summary.json  quantized_eval_history.json  run_config.json  submission_asset_manifest.json  test_metrics_float.json
scripts/: prepare_submission_assets.py
src/crossing_detector/: __init__.py  classmate_dataset.py  data.py  import_own_zip_dataset.py  metrics.py  models.py  predict.py  quantize.py  smoke_test.py  train.py
tests/: test_classmate_dataset.py  test_import_own_zip_dataset.py  test_metrics.py  test_model_smoke.py  test_predict.py  test_quantize.py  test_training_policy.py
